messenger/include/dna/dna_engine.h


typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
typedef struct {
    char fingerprint[129];      
    char display_name[256];     
    char nickname[64];          
    bool is_online;             
    uint64_t last_seen;         
} dna_contact_t;
typedef struct {
    char fingerprint[129];      
    char display_name[64];      
    char message[256];          
    uint64_t requested_at;      
    int status;                 
} dna_contact_request_t;
typedef struct {
    int id;                     
    char sender[129];           
    char recipient[129];        
    char *plaintext;            
    uint64_t timestamp;         
    bool is_outgoing;           
    int status;                 
    int message_type;           
    bool deleted_by_sender;     
    char content_hash[65];      
} dna_message_t;
typedef struct {
    char uuid[37];              
    char name[256];             
    char creator[129];          
    int member_count;           
    uint64_t created_at;        
} dna_group_t;
typedef struct {
    char fingerprint[129];      
    uint64_t added_at;          
    bool is_owner;              
} dna_group_member_t;
typedef struct {
    char uuid[37];              
    char name[256];             
    char creator[129];          
    int member_count;           
    uint64_t created_at;        
    bool is_owner;              
    uint32_t gek_version;       
} dna_group_info_t;
typedef struct {
    char group_uuid[37];        
    char group_name[256];       
    char inviter[129];          
    int member_count;           
    uint64_t invited_at;        
} dna_invitation_t;
typedef void (*dna_completion_cb)(
    dna_request_id_t request_id,
    int error,
    void *user_data
);
typedef void (*dna_tx_status_cb)(
    dna_request_id_t request_id,
    const char *error,
    const char *tx_hash,
    int status,
    void *user_data
);
typedef void (*dna_transactions_cb)(
    dna_request_id_t request_id,
    int error,
    dna_transaction_t *transactions,
    int count,
    void *user_data
);
typedef void (*dna_presence_cb)(
    dna_request_id_t request_id,
    int error,
    uint64_t last_seen,     
    void *user_data
);
typedef enum {
    DNA_EVENT_DHT_CONNECTED,
    DNA_EVENT_DHT_DISCONNECTED,
    DNA_EVENT_MESSAGE_RECEIVED,
    DNA_EVENT_MESSAGE_SENT,
    DNA_EVENT_MESSAGE_DELIVERED,
    DNA_EVENT_MESSAGE_READ,
    DNA_EVENT_CONTACT_ONLINE,
    DNA_EVENT_CONTACT_OFFLINE,
    DNA_EVENT_GROUP_INVITATION_RECEIVED,
    DNA_EVENT_GROUP_MEMBER_JOINED,
    DNA_EVENT_GROUP_MEMBER_LEFT,
    DNA_EVENT_IDENTITY_LOADED,
    DNA_EVENT_CONTACT_REQUEST_RECEIVED,  
    DNA_EVENT_OUTBOX_UPDATED,            
    DNA_EVENT_GROUP_MESSAGE_RECEIVED,    
    DNA_EVENT_GROUPS_SYNCED,             
    DNA_EVENT_CONTACTS_SYNCED,           
    DNA_EVENT_GEKS_SYNCED,               
    DNA_EVENT_DHT_PUBLISH_COMPLETE,      
    DNA_EVENT_DHT_PUBLISH_FAILED,        
    DNA_EVENT_WALL_NEW_POST,             
    DNA_EVENT_CHANNEL_NEW_POST,          
    DNA_EVENT_CHANNEL_SUBS_SYNCED,       
    DNA_EVENT_MEDIA_UPLOAD_PROGRESS,     
    DNA_EVENT_ERROR
} dna_event_type_t;
typedef struct {
    dna_event_type_t type;
    union {
        struct {
            dna_message_t message;
        } message_received;
        struct {
            int message_id;
            int new_status;
            char recipient[129];  
        } message_status;
        struct {
            char fingerprint[129];
        } contact_status;
        struct {
            dna_invitation_t invitation;
        } group_invitation;
        struct {
            char group_uuid[37];
            char member[129];
        } group_member;
        struct {
            char fingerprint[129];
        } identity_loaded;
        struct {
            dna_contact_request_t request;
        } contact_request_received;
        struct {
            char contact_fingerprint[129];  
        } outbox_updated;
        struct {
            char recipient[129];            
            uint64_t seq_num;               
            uint64_t timestamp;             
        } message_delivered;
        struct {
            char group_uuid[37];            
            int new_count;                  
        } group_message;
        struct {
            int groups_restored;            
        } groups_synced;
        struct {
            int contacts_synced;            
        } contacts_synced;
        struct {
            int geks_synced;                
        } geks_synced;
        struct {
            uint64_t request_id;            
            char base_key[256];             
            int error_code;                 
        } dht_publish;
        struct {
            char author_fingerprint[129];   
            char post_uuid[37];             
        } wall_new_post;
        struct {
            char channel_uuid[37];
            char post_uuid[37];
            char author_fingerprint[129];
        } channel_new_post;
        struct {
            int subscriptions_synced;
        } channel_subs_synced;
        struct {
            uint64_t bytes_sent;
            uint64_t total_bytes;
            uint64_t request_id;            
        } media_upload_progress;
        struct {
            int code;
            char message[256];
        } error;
    } data;
} dna_event_t;
DNA_API void dna_free_event(dna_event_t *event);
DNA_API int dna_engine_pause(dna_engine_t *engine);
DNA_API int dna_engine_resume(dna_engine_t *engine);
DNA_API bool dna_engine_is_paused(dna_engine_t *engine);
DNA_API dna_request_id_t dna_engine_get_tx_status(
    dna_engine_t *engine,
    const char *tx_hash,
    const char *chain,
    dna_tx_status_cb callback,
    void *user_data
);
DNA_API dna_request_id_t dna_engine_get_transactions(
    dna_engine_t *engine,
    int wallet_index,
    const char *network,
    dna_transactions_cb callback,
    void *user_data
);
DNA_API dna_request_id_t dna_engine_get_cached_transactions(
    dna_engine_t *engine,
    int wallet_index,
    const char *network,
    dna_transactions_cb callback,
    void *user_data
);
typedef void (*dna_dex_quote_cb)(
    dna_request_id_t request_id,
    int error,
    const dna_dex_quote_t *quotes,
    int count,
    void *user_data
);
DNA_API dna_request_id_t dna_engine_dex_quote(
    dna_engine_t *engine,
    const char *from_token,
    const char *to_token,
    const char *amount_in,
    const char *dex_filter,
    dna_dex_quote_cb callback,
    void *user_data
);
typedef void (*dna_dex_swap_cb)(
    dna_request_id_t request_id,
    int error,
    const dna_dex_swap_result_t *result,
    void *user_data
);
DNA_API dna_request_id_t dna_engine_dex_swap(
    dna_engine_t *engine,
    int wallet_index,
    const char *from_token,
    const char *to_token,
    const char *amount_in,
    dna_dex_swap_cb callback,
    void *user_data
);
DNA_API dna_request_id_t dna_engine_refresh_presence(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
DNA_API bool dna_engine_is_peer_online(dna_engine_t *engine, const char *fingerprint);
DNA_API void dna_engine_pause_presence(dna_engine_t *engine);
DNA_API void dna_engine_resume_presence(dna_engine_t *engine);
DNA_API int dna_engine_network_changed(dna_engine_t *engine);
DNA_API dna_request_id_t dna_engine_lookup_presence(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_presence_cb callback,
    void *user_data
);
DNA_API size_t dna_engine_listen_outbox(
    dna_engine_t *engine,
    const char *contact_fingerprint
);
DNA_API void dna_engine_cancel_outbox_listener(
    dna_engine_t *engine,
    const char *contact_fingerprint
);
DNA_API int dna_engine_listen_all_contacts(
    dna_engine_t *engine
);
DNA_API void dna_engine_cancel_all_outbox_listeners(
    dna_engine_t *engine
);
DNA_API void dna_free_strings(char **strings, int count);
DNA_API void dna_free_contacts(dna_contact_t *contacts, int count);
DNA_API void dna_free_messages(dna_message_t *messages, int count);
DNA_API void dna_free_groups(dna_group_t *groups, int count);
DNA_API void dna_free_group_info(dna_group_info_t *info);
DNA_API void dna_free_group_members(dna_group_member_t *members, int count);
DNA_API void dna_free_invitations(dna_invitation_t *invitations, int count);