messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart


  late final _dna_engine_get_tx_status = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<DnaTxStatusCb>,
          Pointer<Void>),
      int Function(
          Pointer<dna_engine_t>,
          Pointer<Utf8>,
          Pointer<Utf8>,
          Pointer<DnaTxStatusCb>,
          Pointer<Void>)>('dna_engine_get_tx_status');

  int dna_engine_get_tx_status(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> tx_hash,
    Pointer<Utf8> chain,
    Pointer<DnaTxStatusCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_tx_status(engine, tx_hash, chain, callback, user_data);
  }

  late final _dna_engine_get_transactions = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Int32, Pointer<Utf8>,
          Pointer<DnaTransactionsCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, int, Pointer<Utf8>,
          Pointer<DnaTransactionsCb>, Pointer<Void>)>('dna_engine_get_transactions');

  int dna_engine_get_transactions(
    Pointer<dna_engine_t> engine,
    int wallet_index,
    Pointer<Utf8> network,
    Pointer<DnaTransactionsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_transactions(
        engine, wallet_index, network, callback, user_data);
  }

  late final _dna_engine_get_cached_transactions = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Int32, Pointer<Utf8>,
          Pointer<DnaTransactionsCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, int, Pointer<Utf8>,
          Pointer<DnaTransactionsCb>, Pointer<Void>)>('dna_engine_get_cached_transactions');

  int dna_engine_get_cached_transactions(
    Pointer<dna_engine_t> engine,
    int wallet_index,
    Pointer<Utf8> network,
    Pointer<DnaTransactionsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_cached_transactions(
        engine, wallet_index, network, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // DEX
  // ---------------------------------------------------------------------------

  late final _dna_engine_dex_quote = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<Utf8>, Pointer<DnaDexQuoteCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<Utf8>, Pointer<DnaDexQuoteCb>, Pointer<Void>)>('dna_engine_dex_quote');

  int dna_engine_dex_quote(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> from_token,
    Pointer<Utf8> to_token,
    Pointer<Utf8> amount_in,
    Pointer<Utf8> dex_filter,
    Pointer<DnaDexQuoteCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_dex_quote(
        engine, from_token, to_token, amount_in, dex_filter, callback, user_data);
  }

  late final _dna_engine_dex_swap = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Int32, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<DnaDexSwapCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, int, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<DnaDexSwapCb>, Pointer<Void>)>('dna_engine_dex_swap');

  int dna_engine_dex_swap(
    Pointer<dna_engine_t> engine,
    int wallet_index,
    Pointer<Utf8> from_token,
    Pointer<Utf8> to_token,
    Pointer<Utf8> amount_in,
    Pointer<DnaDexSwapCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_dex_swap(
        engine, wallet_index, from_token, to_token, amount_in, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // P2P & PRESENCE
  // ---------------------------------------------------------------------------

  late final _dna_engine_refresh_presence = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_refresh_presence');

  int dna_engine_refresh_presence(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_refresh_presence(engine, callback, user_data);
  }

  late final _dna_engine_is_peer_online = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      bool Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_is_peer_online');

  bool dna_engine_is_peer_online(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
  ) {
    return _dna_engine_is_peer_online(engine, fingerprint);
  }

  /// Pause presence updates (call when app goes to background)
  late final _dna_engine_pause_presence = _lib.lookupFunction<
      Void Function(Pointer<dna_engine_t>),
      void Function(Pointer<dna_engine_t>)>('dna_engine_pause_presence');

  void dna_engine_pause_presence(Pointer<dna_engine_t> engine) {
    _dna_engine_pause_presence(engine);
  }

  /// Resume presence updates (call when app comes to foreground)
  late final _dna_engine_resume_presence = _lib.lookupFunction<
      Void Function(Pointer<dna_engine_t>),
      void Function(Pointer<dna_engine_t>)>('dna_engine_resume_presence');

  void dna_engine_resume_presence(Pointer<dna_engine_t> engine) {
    _dna_engine_resume_presence(engine);
  }

  /// Pause engine for background mode (v0.6.50+)
  /// Suspends DHT listeners while keeping engine alive for fast resume
  late final _dna_engine_pause = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_pause');

  int dna_engine_pause(Pointer<dna_engine_t> engine) {
    return _dna_engine_pause(engine);
  }

  /// Resume engine from background mode (v0.6.50+)
  /// Resubscribes DHT listeners for fast return to foreground
  late final _dna_engine_resume = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_resume');

  int dna_engine_resume(Pointer<dna_engine_t> engine) {
    return _dna_engine_resume(engine);
  }

  /// Check if engine is paused (v0.6.50+)
  late final _dna_engine_is_paused = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>),
      bool Function(Pointer<dna_engine_t>)>('dna_engine_is_paused');

  bool dna_engine_is_paused(Pointer<dna_engine_t> engine) {
    return _dna_engine_is_paused(engine);
  }

  /// Handle network connectivity change (reinitialize DHT)
  late final _dna_engine_network_changed = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_network_changed');

  int dna_engine_network_changed(Pointer<dna_engine_t> engine) {
    return _dna_engine_network_changed(engine);
  }

  late final _dna_engine_lookup_presence = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<DnaPresenceCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<DnaPresenceCb>,
          Pointer<Void>)>('dna_engine_lookup_presence');

  int dna_engine_lookup_presence(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaPresenceCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_lookup_presence(engine, fingerprint, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // OUTBOX LISTENERS (Real-time offline message notifications)
  // ---------------------------------------------------------------------------

  late final _dna_engine_listen_outbox = _lib.lookupFunction<
      Size Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_listen_outbox');

  /// Start listening for updates to a contact's outbox
  /// Returns listener token (> 0 on success, 0 on failure)
  int dna_engine_listen_outbox(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contact_fingerprint,
  ) {
    return _dna_engine_listen_outbox(engine, contact_fingerprint);
  }

  late final _dna_engine_cancel_outbox_listener = _lib.lookupFunction<
      Void Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      void Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_cancel_outbox_listener');

  /// Cancel an active outbox listener
  void dna_engine_cancel_outbox_listener(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contact_fingerprint,
  ) {
    _dna_engine_cancel_outbox_listener(engine, contact_fingerprint);
  }

  late final _dna_engine_listen_all_contacts = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_listen_all_contacts');

  /// Start listeners for all contacts' outboxes
  /// Returns number of listeners started
  int dna_engine_listen_all_contacts(Pointer<dna_engine_t> engine) {
    return _dna_engine_listen_all_contacts(engine);
  }

  late final _dna_engine_cancel_all_outbox_listeners = _lib.lookupFunction<
      Void Function(Pointer<dna_engine_t>),
      void Function(Pointer<dna_engine_t>)>('dna_engine_cancel_all_outbox_listeners');

  /// Cancel all active outbox listeners
  void dna_engine_cancel_all_outbox_listeners(Pointer<dna_engine_t> engine) {
    _dna_engine_cancel_all_outbox_listeners(engine);
  }

  // ---------------------------------------------------------------------------
  // MEMORY MANAGEMENT
  // ---------------------------------------------------------------------------

  late final _dna_free_event = _lib.lookupFunction<
      Void Function(Pointer<dna_event_t>),
      void Function(Pointer<dna_event_t>)>('dna_free_event');

  void dna_free_event(Pointer<dna_event_t> event) {
    _dna_free_event(event);
  }

  late final _dna_free_strings = _lib.lookupFunction<
      Void Function(Pointer<Pointer<Utf8>>, Int32),
      void Function(Pointer<Pointer<Utf8>>, int)>('dna_free_strings');

  void dna_free_strings(Pointer<Pointer<Utf8>> strings, int count) {
    _dna_free_strings(strings, count);
  }

  late final _dna_free_contacts = _lib.lookupFunction<
      Void Function(Pointer<dna_contact_t>, Int32),
      void Function(Pointer<dna_contact_t>, int)>('dna_free_contacts');

  void dna_free_contacts(Pointer<dna_contact_t> contacts, int count) {
    _dna_free_contacts(contacts, count);
  }

  late final _dna_free_messages = _lib.lookupFunction<
      Void Function(Pointer<dna_message_t>, Int32),
      void Function(Pointer<dna_message_t>, int)>('dna_free_messages');

  void dna_free_messages(Pointer<dna_message_t> messages, int count) {
    _dna_free_messages(messages, count);
  }

  late final _dna_free_groups = _lib.lookupFunction<
      Void Function(Pointer<dna_group_t>, Int32),
      void Function(Pointer<dna_group_t>, int)>('dna_free_groups');

  void dna_free_groups(Pointer<dna_group_t> groups, int count) {
    _dna_free_groups(groups, count);
  }

  late final _dna_free_invitations = _lib.lookupFunction<
      Void Function(Pointer<dna_invitation_t>, Int32),
      void Function(Pointer<dna_invitation_t>, int)>('dna_free_invitations');

  void dna_free_invitations(Pointer<dna_invitation_t> invitations, int count) {
    _dna_free_invitations(invitations, count);
  }

  late final _dna_free_group_info = _lib.lookupFunction<
      Void Function(Pointer<dna_group_info_t>),
      void Function(Pointer<dna_group_info_t>)>('dna_free_group_info');

  void dna_free_group_info(Pointer<dna_group_info_t> info) {
    _dna_free_group_info(info);
  }

  late final _dna_free_group_members = _lib.lookupFunction<
      Void Function(Pointer<dna_group_member_t>, Int32),
      void Function(Pointer<dna_group_member_t>, int)>('dna_free_group_members');

  void dna_free_group_members(Pointer<dna_group_member_t> members, int count) {
    _dna_free_group_members(members, count);
  }
